# trade_flow

./: .gitignore  README.md  pyproject.toml
backtests/: gradeC_12_quick.json  gradeC_full_evaluate.json  gradeC_full_evaluate_v2.json  gradeC_full_quick.json  rebalance_band_sweep.json
backtests/cadence_sweep/: e1_h0_b0_c15.json  e21_h0_b0_c15.json  e21_h0_b0_c30.json  e21_h5_b0_c15.json  e5_h0_b0_c15.json  e5_h5_b002_c15.json  e5_h5_b0_c15.json
configs/: events.example.json  portfolio.example.json  runtime.example.toml  runtime.toml  strategy.toml  universe_high_volatility.toml  universe_main.toml
docs/: RUNBOOK.md
docs/codex/: trade-flow-final-tech-spec.md
docs/data/: 2026-07-21-us-market-data-collection-handoff.md  data-collection.md
docs/operations/: monitoring.md
docs/reports/: recommendation-tracking.md
docs/research/: 01-ai-prompts.md  02-methodologies.md  03-reference-implementations.md  04-social-sentiment.md  README.md
docs/reviews/: 2026-07-21-phase1-review-feedback.md  2026-07-21-phase1-review-response.md  2026-07-21-tradeflow-us-db-review.md  2026-07-23-cadence-sweep.md  2026-07-23-codex-crossreview.md  2026-07-23-codex-regime-crossreview.md  2026-07-23-fable-full-review-claude.md  (+5 more)
output/: tradeflow_us_raw_v1.sha256  tradeflow_us_raw_v1_manifest.json  tradeflow_us_raw_v1_validation.md
scripts/: backtest.py  build_us_raw.py  collect.py  daily_check.py  daily_routine.sh  daily_run.py  kis_smoke.py  recommend.py  refresh_universe.py  send_telegram.py  track_recommendations.py  validate_us_raw.py  weekly_report.sh
src/trade_flow/: cli.py  (+2 more)
(+99 files in other folders)
