[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-flow"
version = "0.1.0"
description = "Reproducible daily-bar swing strategy backtester"
requires-python = ">=3.12,<3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.9",
]

[project.scripts]
trade-flow = "trade_flow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
